# weather_lens

./: .env.example  .gitignore  API_SCHEDULER_IMPLEMENTATION.md  CLAUDE.md  DEPLOYMENT.md  IMPLEMENTATION_PROCESSORS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_STATUS.md  INTEGRATION_SUMMARY.md  KMA_MARINE_FORECAST_API_RESEARCH.md  LICENSE  OCEAN_STATIONS_COMPLETE.md  OCEAN_STATIONS_SCHEMA.md  PhotoSpot_Korea_기획서_v3_검증완료.docx.md  QUICKSTART.md  QUICKSTART_API_TEST.md  README_MODULES.md  WORKER_COMPLETE_CHECKLIST.md  WORKER_COMPLETE_REPORT.md  main.py  pyproject.toml  render.yaml  requirements.txt  scheduler.py  spec.md  test_api.py  test_modules.py  test_processors_import.py  verify_implementation.py  warmup.py
.obsidian/: workspace.json
api/: README.md  __init__.py  main.py
collectors/: README.md  __init__.py  airkorea.py  base_collector.py  beach_info.py  example_usage.py  khoa_ocean.py  kma_forecast.py  kma_marine_forecast.py  openmeteo.py
config/: __init__.py  settings.py  weights.json
curators/: __init__.py  gemini_curator.py
data/: beaches.py  init_beaches.sql  init_ocean_mapping.sql  init_ocean_stations.sql  marine_zones.py  ocean_stations.py  regions.db.backup
docs/: API_SOURCE_MIGRATION.md  COASTAL_CLASSIFICATION_COMPLETE.md  DATABASE_CLEANUP_REPORT.md  DB_API_GUIDE.md  FORECAST_API_GUIDE.md  ID_REFERENCE.md  KMA_API_INTEGRATION.md  REGIONS_FULL_LIST.md  revision_history.md  행정안전부_읍면동 하부행정기관 현황_20240731.csv
feedbacks/: __init__.py  analyzer.py  automation.py  collector.py
messengers/: __init__.py  telegram_bot.py
models/: __init__.py  feedback.py  (+3 more)
(+54 files in other folders)
